apps/second-site/second-site.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 8022
    targetPort: 8080
  selector:
    app: second-site
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: second-site
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: second-site
  template:
    metadata:
      labels:
        app: second-site
    spec:
      containers:
      - name: hello-k8s
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
