apps/second-site/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: site-service
            port:
              number: 8080
